--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ nunit-*.xml
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
-dlldata.c
+#dlldata.c
 
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
@@ -75,7 +75,7 @@ StyleCopReport.xml
 *_h.h
 *.ilk
 *.meta
-*.obj
+#*.obj
 *.iobj
 *.pch
 *.pdb
