--- a/Lab1/Lab1.vcxproj
+++ b/Lab1/Lab1.vcxproj
@@ -81,29 +81,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="src\Display.cpp" />
+    <ClCompile Include="src\GameObject.cpp" />
+    <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MainGame.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\obj_loader.cpp" />
+    <ClCompile Include="src\Physics.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\stb_image.c" />
     <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameObject.h" />
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Display.h" />
+    <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\Light.h" />
     <ClInclude Include="include\MainGame.h" />
     <ClInclude Include="include\Mesh.h" />
     <ClInclude Include="include\obj_loader.h" />
+    <ClInclude Include="include\Physics.h" />
     <ClInclude Include="include\ResourceManager.h" />
     <ClInclude Include="include\Shader.h" />
     <ClInclude Include="include\stb_image.h" />
     <ClInclude Include="include\Texture.h" />
     <ClInclude Include="include\Transform.h" />
-    <ClInclude Include="SoundLoader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
