--- a/Lab1/Lab1.vcxproj
+++ b/Lab1/Lab1.vcxproj
@@ -81,6 +81,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Audio.cpp" />
     <ClCompile Include="src\Display.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\Light.cpp" />
@@ -94,6 +95,7 @@
     <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Audio.h" />
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Display.h" />
     <ClInclude Include="include\GameObject.h" />
