--- a/Lab1/Lab1.vcxproj
+++ b/Lab1/Lab1.vcxproj
@@ -86,7 +86,7 @@
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\MainGame.cpp" />
+    <ClCompile Include="src\GameManager.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\obj_loader.cpp" />
     <ClCompile Include="src\Physics.cpp" />
@@ -100,7 +100,7 @@
     <ClInclude Include="include\Display.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\Light.h" />
-    <ClInclude Include="include\MainGame.h" />
+    <ClInclude Include="include\GameManager.h" />
     <ClInclude Include="include\Mesh.h" />
     <ClInclude Include="include\obj_loader.h" />
     <ClInclude Include="include\Physics.h" />
