--- a/Lab1/Lab1.vcxproj
+++ b/Lab1/Lab1.vcxproj
@@ -82,7 +82,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Audio.cpp" />
-    <ClCompile Include="src\Display.cpp" />
+    <ClCompile Include="src\DisplayWindow.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -97,7 +97,7 @@
   <ItemGroup>
     <ClInclude Include="include\Audio.h" />
     <ClInclude Include="include\Camera.h" />
-    <ClInclude Include="include\Display.h" />
+    <ClInclude Include="include\DisplayWindow.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\Light.h" />
     <ClInclude Include="include\GameManager.h" />
